# bazingo

./: .gitignore  CMakeLists.txt  README.md  bazingo.py  build.sh  main.cpp  package-lock.json  package.json
client/: README.md
client/src/: App.svelte  main.js
public/: app.js  bazingo-footer.js  index.html  style.css  table-cell.js
src/: .firebaserc  Card.cpp  Card.h  Column.cpp  Column.h  Game.h  Square.cpp  Square.h  main.cpp  utils.cpp  utils.h
src/api/: bazingo.py  index.js  package-lock.json
src/api/public/: table-cell.js
src/client/src/: App.tsx
src/client/src/components/: CallerBoardCell.module.css  CallerBoardCell.tsx  CallerBoardRow.tsx
